# flowvis-3d

./: README.md  launch_app.py  main.ipynb  main.py  main_development.py  main_pages.py  main_scratch.py  main_test.py  point_cloud_preprocessor.py  point_cloud_registration.py  point_cloud_visualizer.py  pyproject.toml  scratch.py  test.py
components/: point_cloud_preprocessor.py  point_cloud_processor.py  point_cloud_registration.py  point_cloud_utils.py  point_cloud_visualizer.py  user_interface.py  utils.py  workers.py
scratch/: main.ipynb  scratch.py
templates/: RearWing_WT_2343_Einstar.ply  data.xml  iLaunchData.xml  post-c44-v4.2.xml
ui/: main_window.ui
